// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
<main
  className="ant-layout-content {}"
  id="areas.content"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</main>
`;

exports[`Render areas.footer - value[0] 1`] = `
<main
  className="ant-layout-content {}"
  id="areas.footer"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</main>
`;

exports[`Render areas.header - value[0] 1`] = `
<main
  className="ant-layout-content {}"
  id="areas.header"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</main>
`;

exports[`Render default - value[0] 1`] = `
<main
  className="ant-layout-content {}"
  id="default"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</main>
`;

exports[`Render properties.style - value[0] 1`] = `
<main
  className="ant-layout-content {\\"style\\":{\\"border\\":\\"1px solid blue\\"}}"
  id="properties.style"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</main>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema areas.footer 1`] = `true`;

exports[`Test Schema areas.footer 2`] = `null`;

exports[`Test Schema areas.header 1`] = `true`;

exports[`Test Schema areas.header 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
